// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upgrade help logs a warning when \`scriptPreprocessor\` and/or \`preprocessorIgnorePatterns\` are used 1`] = `
"● Deprecation Warning:

  Option \\"preprocessorIgnorePatterns\\" was replaced by \\"transformIgnorePatterns\\", which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    \\"transformIgnorePatterns\\": [\\"bar/baz\\", \\"qux/quux\\"]
  }

  Please update your configuration.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
"
`;

exports[`preset throws when preset is invalid 1`] = `
"● Validation Error:

  Preset react-native is invalid:
  Unexpected token } in JSON at position 104

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
"
`;

exports[`preset throws when preset not found 1`] = `
"● Validation Error:

  Preset doesnt-exist not found.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
"
`;

exports[`rootDir throws if the options is missing a rootDir property 1`] = `
"● Validation Error:

  Configuration option rootDir must be specified.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
"
`;

exports[`testEnvironment throws on invalid environment names 1`] = `
"● Validation Error:

  Test environment phantom cannot be found. Make sure the testEnvironment configuration option points to an existing node module.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
"
`;

exports[`testMatch throws if testRegex and testMatch are both specified 1`] = `
"● Validation Error:

  Configuration options testMatch and testRegex cannot be used together.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
"
`;

exports[`testPathPattern <regexForTestFiles> ignores invalid regular expressions and logs a warning 1`] = `"  Invalid testPattern a( supplied. Running all tests instead."`;

exports[`testPathPattern --testPathPattern ignores invalid regular expressions and logs a warning 1`] = `"  Invalid testPattern a( supplied. Running all tests instead."`;
